Configuración de nagios

--- a/etc/resource.cfg
+++ b/etc/resource.cfg
@@ -25,9 +25,9 @@
 $USER1$=/opt/nagios/libexec
 
 # Sets $USER2$ to be the path to event handlers
-#$USER2$=/opt/nagios/libexec/eventhandlers
+$USER2$=/opt/nagios/libexec/eventhandlers
 
 # Store some usernames and passwords (hidden from the CGIs)
-#$USER3$=someuser
-#$USER4$=somepassword
+$USER3$=jcazorla
+$USER4$=123456789
 
