--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,7 @@ services:
       - "./var/:/opt/nagios/var/"
       - "./ssmtp.conf:/etc/ssmtp/ssmtp.conf"
       - "./custom-plugins/:/opt/Custom-Nagios-Plugins/"
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "9025:8025"
